--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "rm -rf ./dist",
     "lint": "eslint .",
     "prepare": "ncc build index.js -o dist --source-map --license licenses.txt",
-    "test": "jest",
+    "test": "jest unit.test.js",
+    "test-integration": "jest integration.test.js",
     "all": "npm run lint && npm run prepare && npm run test"
   },
   "repository": {
