--- a/action.yml
+++ b/action.yml
@@ -5,7 +5,7 @@ description: >
 author: Turbot
 branding:
   color: green
-  icon: check-circle
+  icon: arrow-right-circle
 inputs:
   flowpipe-version:
     description: 'Flowpipe CLI version to install. Defaults to "latest". Examples: latest, 0.1.0, 0.2.2.'
